--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ngrx/effects": "^4.1.1",
+    "@ngrx/entity": "^4.1.1",
     "@ngrx/store": "^4.1.1",
+    "angularfire2": "^5.0.0-rc.3",
     "core-js": "^2.4.1",
+    "firebase": "^4.6.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
